# Thesis

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
active_learning/: 1_data.py  2_training.py  3_inference.py  4_evaluation_best.py  4_evaluation_ds.py  4_evaluation_random.py  4_evaluation_top.py  4_evaluation_uncertain.py  4_evaluation_unsupervised.py  plot.py
datasets/: path_autocorrelation.py  path_downsampling.py  path_fourier.py  path_plot.py  prop_autocorrelation.py  prop_downsampling.py  prop_fourier.py  prop_plot.py  sine_example.py
docs/: getting_started.md  index.md
docs/reproducing_results/: chapter4.md  chapter5.md  chapter6.md  chapter7.md
getting_started/: index.html
model_garden/: lwvae.py  noma.py  omnianomaly.py  sisvae.py  tcnae.py  tevae.py  tevae_mm.py  vasp.py  vsvae.py
pdm/: 0_parse.py  1_data.py  2_training.py  3_inference.py  4_evaluation.py  pdm_downsampling.py  pdm_plot.py
reproducing_results/chapter4/: index.html
reproducing_results/chapter5/: index.html
reproducing_results/chapter6/: index.html
reproducing_results/chapter7/: index.html
search/: search_index.json
status_quo/: apr.py  path.py  swat.py
thesis_cover/: generation_script.py  generation_script2.py
unsupervised_anomaly_detection/path/: 0_postsim.py  1_data.py  2_training.py  3_inference.py  4_evaluation.py
unsupervised_anomaly_detection/prop/: 0_parse.py  1_data.py  (+3 more)
utilities/: base_class.py  data_class.py  detection_class.py  inference_class.py  plotter.py
(+10 files in other folders)
