[project]
name = "thesis"
version = "0.1.0"
description = "This is the repository containing all code necessary to reproduce the results in the PhD Thesis."
authors = [
    { name = "Lucas Correia", email = "github.freehand702@passmail.net" }
]
requires-python = "~=3.10.0"
dependencies = [
    'tensorflow[and-cuda]==2.15.1',
    'tensorflow-probability==0.23.0',
    "scipy>=1.15.3",
    "pandas>=2.3.3",
    "numpy>=1.26.4",
    "openpyxl>=3.1.5",
    "tqdm>=4.67.3",
    "scikit-learn>=1.7.2",
    "python-dotenv>=1.2.2",
    "plotly>=6.6.0",
    "dtaidistance>=2.4.0",
    "statsmodels>=0.14.6",
    "asammdf>=8.1.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["utilities*"]

[tool.deptry]
exclude = [".venv", "unsupervised_anomaly_detection/path/tsadis", "unsupervised_anomaly_detection/prop/tsadis"]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "mkdocs-material>=9.7.6",
    "prek>=0.3.8",
    "ruff>=0.15.8",
]
